<resources>
    <string name="app_name">MacroLensStepper</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_steps_text">Number of steps</string>
    <string name="number_of_steps_edit">Integer values</string>
    <string name="distance_to_travel_text">Distance to travel</string>
    <string name="distance_to_travel_edit">in millimeter</string>
    <string name="radio_button_direction_in">In</string>
    <string name="radio_button_direction_out">Out</string>
    <string name="main_start_button">Start</string>
    <string name="main_stop_button">Stop</string>
    <string name="configure_button">Configure</string>
    <string name="current_status_text">Current Status:</string>
    <string name="title_activity_configuration">configuration</string>
    <string name="title_activity_display_configuration">DisplayConfigurationActivity</string>
    <string name="try_number_of_steps_text">number of steps</string>
    <string name="go_in_button">Go in</string>
    <string name="go_out_button">Go out</string>
    <string name="ip_adres_text">IP address:</string>
    <string name="ip_hint">192.168.178.19</string>
    <string name="find_ip_text_button">Find ip</string>
    <string name="set_step_size">Configure step size</string>
    <string name="distance_traveled">Resulting distance</string>
    <string name="save_configuration">Save configuration</string>
    <string name="set_stepper_to_ap">Connect Stepper To Wifi</string>
    <string name="configure_connection_text">Connect to Stepper</string>
    <string name="stepper_access_point">Stepper Access point</string>
    <string name="normal_wifi">Select Wifi</string>
    <string name="number_of_repetitions">Number of repetitions</string>
    <string name="number_of_repetitions_edit">as a whole number</string>
    <string name="esp_access_point_name">ESP Access point name:</string>
    <string name="enter_esp_password">Enter ESP password</string>
    <string name="home_wifi">Home wifi</string>
    <string name="enter_wifi_password">Enter wifi password</string>
    <string name="connect_stepper_to_wifi">Connect stepper to Wifi</string>
    <string name="time_between_steps">Time between steps</string>
    <string name="in_seconds">in seconds</string>
    <string name="main_speed_text">Speed</string>
</resources>
