<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kaldapps.macrolensstepper.StepperConnectionActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_stepper_connection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esp_access_point_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            />
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/EspAP"
            />
        </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_esp_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:id="@+id/EspPasswordEditText"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_wifi"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                />
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/NormalAP"
                />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_wifi_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:id="@+id/WifiPasswordEditText"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_stepper_to_wifi"
        android:onClick="connectStepperToAP"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_status_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/statusText"
        android:textColor="#000000"/>

</LinearLayout>
